参考antd,修改组件和样式结构

--- a/src/renderer/src/styles/normalize.scss
+++ b/src/renderer/src/styles/normalize.scss
@@ -1,16 +1,6 @@
-// this file amis to clear some default styles of the milkdown editor
-.code-fence {
-  position: relative;
-}
-.code-fence_selector-wrapper {
-  position: absolute !important;
-  right: 0;
-  bottom: -12px;
-}
-.code-fence_selector-wrapper .code-fence_selector span:nth-child(2) {
-  display: none !important;
-}
-// 工具输入框？
-.milkdown-sj2pad {
-  display: none !important;
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  box-sizing: border-box;
 }
