--- a/src/renderer/src/styles/index.scss
+++ b/src/renderer/src/styles/index.scss
@@ -1,39 +1,6 @@
-@use './normalize.scss';
-@use './SideBar.scss';
-* {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  box-sizing: border-box;
-}
-
-.container {
-  display: flex;
-  width: 100vw;
-  height: 100vh;
-  .side-bar {
-    width: 200px;
-    min-width: 200px;
-  }
-  // 装edtor的容器
-  > div:nth-child(2) {
-    flex: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #edeff3;
-    .milkdown-menu-wrapper {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      .milkdown {
-        height: 100%;
-        width: 100%;
-        // border-radius: 6px;
-        padding-top: 10px;
-        overflow: scroll;
-      }
-    }
-  }
-}
+// 使用@use会有模块冲突，但是@import是将要被废弃的语法？
+@import '../components/Editor/styles/index.scss';
+@import '../components/Header/styles/index.scss';
+@import '../components/SideBar/styles/index.scss';
+@import './layout.scss';
+@import './normalize.scss';
