--- a/src/renderer/src/components/Header/styles/index.scss
+++ b/src/renderer/src/components/Header/styles/index.scss
@@ -9,16 +9,28 @@ $dark-color: rgba(236, 239, 244, 0.87);
   justify-content: space-between;
   color: $dark-color;
   .controlers {
-    svg {
-      height: 14px;
-      width: 14px;
-      opacity: 0.6;
-      margin: 0 3px;
-      color: azure;
-      filter: saturate(30%);
+    ul {
+      display: flex;
       &:hover {
-        filter: saturate(100%);
-        // 修改饱和度
+        svg {
+          opacity: 1;
+        }
+      }
+      li {
+        margin: 4px 3px;
+        height: 12px;
+        width: 12px;
+        border-radius: 50%;
+        background-color: beige;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: lightgray;
+        svg {
+          width: 100%;
+          height: 100%;
+          opacity: 0;
+        }
       }
     }
   }
