--- a/src/renderer/src/styles/layout.scss
+++ b/src/renderer/src/styles/layout.scss
@@ -1,6 +1,8 @@
 .container {
   width: 100vw;
-  height: calc(100vh - 30px);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
   .header {
     height: 30px;
   }
@@ -20,7 +22,12 @@ main {
       height: 100%;
       display: flex;
       flex-direction: column;
+      .milkdown-menu {
+        position: absolute;
+        z-index: 999;
+      }
       .milkdown {
+        max-height: calc(100vh - 30px);
         height: 100%;
         width: 100%;
         // border-radius: 6px;
