解决无法复制问题,更新菜单设置

--- a/src/renderer/src/components/SideBar/styles/index.scss
+++ b/src/renderer/src/components/SideBar/styles/index.scss
@@ -1,6 +1,7 @@
 $dark-color: rgba(236, 239, 244, 0.87);
 $dark-background: rgb(39, 44, 55);
 $side-bar-width: 160px;
+// $max-height: n;
 .side-bar {
   width: $side-bar-width;
   min-width: 100px;
