--- a/src/renderer/src/components/Editor/styles/normalize.scss
+++ b/src/renderer/src/components/Editor/styles/normalize.scss
@@ -1,21 +1,33 @@
 // 清除默认编辑器我不喜欢的样式
 // this file amis to clear some default styles of the milkdown editor
 .code-fence {
-    position: relative;
+  position: relative;
+  // 代码块的语言框大小
+   div.code-fence_selector {
+    width: 90px;
+    height: 30px;
+    opacity: 0%;
   }
-  .code-fence_selector-wrapper {
-    position: absolute !important;
-    right: 0;
-    bottom: -12px;
+  &:hover {
+     div.code-fence_selector {
+      opacity: 100%;
+    }
   }
-  .code-fence_selector-wrapper .code-fence_selector span:nth-child(2) {
-    display: none !important;
-  }
-  // 工具输入框？
-  .milkdown-sj2pad {
-    display: none !important;
-  }
-  
-  .milkdown::-webkit-scrollbar {
-    width: 0 !important;
-  }
+}
+
+.code-fence_selector-wrapper {
+  position: absolute !important;
+  right: 0;
+  bottom: -12px;
+}
+.code-fence_selector-wrapper .code-fence_selector span:nth-child(2) {
+  display: none !important;
+}
+// 工具输入框？
+.milkdown-sj2pad {
+  display: none !important;
+}
+
+.milkdown::-webkit-scrollbar {
+  width: 0 !important;
+}
