--- a/src/renderer/src/components/SideBar/styles/index.scss
+++ b/src/renderer/src/components/SideBar/styles/index.scss
@@ -8,9 +8,9 @@ $max-height: calc(100vh - 30px);
   min-width: 100px;
   color: $dark-color;
   background-color: $dark-background;
-  padding: 0 0 20px 0;
-  font-weight: normal;
-  font-size: small;
+  padding: 30px 0 20px 0;
+  transition: 0.4s;
+  font-size: smaller;
   header {
     display: flex;
     height: 30px;
@@ -18,11 +18,11 @@ $max-height: calc(100vh - 30px);
   }
   .header-list {
     overflow: scroll;
-    max-height: calc(100vh - 60px);
+    max-height: calc(100vh - 100px);
     ul,
     li {
       margin: 10px 0;
-      margin-left: calc(6px * var(--i));
+      margin-left: calc(8px * var(--i));
       a {
         text-decoration: none;
         text-decoration-color: $dark-color;
@@ -32,8 +32,8 @@ $max-height: calc(100vh - 30px);
     ul {
       height: auto;
       svg {
-        height: 10px;
-        width: 10px;
+        height: 8px;
+        width: 8px;
         margin: 0 6px;
         transition: all 0.5s;
       }
@@ -50,7 +50,8 @@ $max-height: calc(100vh - 30px);
     width: 4px;
     position: absolute;
     left: $side-bar-width;
-    height: 80vh;
+    height: 90vh;
+    top: 30px;
     z-index: 99999;
     background-color: rgb(210, 111, 111);
     opacity: 0;
@@ -59,4 +60,8 @@ $max-height: calc(100vh - 30px);
       opacity: 100%;
     }
   }
+}
+.side-bar-close {
+  min-width: 0;
+  width: 0;
 }
