修改标题列表逻辑和样式

--- a/src/renderer/src/components/SideBar/styles/index.scss
+++ b/src/renderer/src/components/SideBar/styles/index.scss
@@ -2,6 +2,7 @@ $dark-color: rgba(236, 239, 244, 0.87);
 $dark-background: rgb(39, 44, 55);
 $side-bar-width: 160px;
 $max-height: calc(100vh - 30px);
+$title-height:30px;
 .side-bar {
   width: $side-bar-width;
   max-height: $max-height;
@@ -19,27 +20,49 @@ $max-height: calc(100vh - 30px);
   .header-list {
     overflow: scroll;
     max-height: calc(100vh - 100px);
-    ul,
-    li {
-      margin: 10px 0;
-      margin-left: calc(8px * var(--i));
-      a {
-        text-decoration: none;
-        text-decoration-color: $dark-color;
-        color: $dark-color;
-      }
-    }
     ul {
       height: auto;
-      svg {
-        height: 8px;
-        width: 8px;
-        margin: 0 6px;
-        transition: all 0.5s;
+      li {
+        display: flex;
+        padding-left:  calc(10px * var(--i));;
+        min-height: $title-height;
+        // 避免标题太长重叠
+        height: auto;
+        line-height: $title-height;
+        &:hover {
+          cursor: pointer;
+          background-color: rgb(56, 62, 77);
+        }
+        div {
+          height: $title-height;
+          width: 10px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin: 0 4px;
+        }
+        a {
+          //占满剩余部分
+          flex:auto;
+          text-decoration: none;
+          text-decoration-color: $dark-color;
+          color: $dark-color;
+        }
+        svg {
+          height: 8px;
+          width: 8px;
+          transition: all 0.5s;
+          opacity: 0%;
+        }
+      }
+    }
+    ul.show-list > li {
+      svg{
+        opacity: 100% ;
       }
     }
     ul.ul-close {
-      height: 20px !important;
+      height: $title-height !important;
       overflow: hidden;
       svg {
         transform: rotateZ(-90deg);
@@ -47,13 +70,13 @@ $max-height: calc(100vh - 30px);
     }
   }
   .drag-line {
-    width: 4px;
+    width: 3px;
     position: absolute;
     left: $side-bar-width;
     height: 90vh;
     top: 30px;
     z-index: 99999;
-    background-color: rgb(210, 111, 111);
+    background-color: rgb(68, 77, 95);
     opacity: 0;
     &:hover {
       cursor: ew-resize;
@@ -63,5 +86,6 @@ $max-height: calc(100vh - 30px);
 }
 .side-bar-close {
   min-width: 0;
-  width: 0;
+  // 加import是因为通过拖拽设置的宽度是行内样式，这里的无法覆盖
+  width: 0 !important;
 }
