修改打开文件逻辑,解决React.StrickMode打印两次问题

--- a/src/renderer/src/components/SideBar/styles/index.scss
+++ b/src/renderer/src/components/SideBar/styles/index.scss
@@ -16,6 +16,15 @@ $title-height:30px;
     display: flex;
     height: 30px;
     justify-content: space-around;
+    svg {
+      display: none;
+      cursor: pointer;
+    }
+    &:hover {
+      svg {
+        display: block;
+      }
+    }
   }
   .header-list {
     overflow: scroll;
