--- a/src/renderer/src/components/Search/styles/index.scss
+++ b/src/renderer/src/components/Search/styles/index.scss
@@ -1,34 +1,33 @@
 $dark-color: rgba(236, 239, 244, 0.87);
-$dark-background: #272c37;
-.search-wrapper {
-    height: 40px;
-    width: 200px;
-    border-radius: 10px;
-    position: absolute;
-    top: 60px;
-    left: 60vw;
-    display: block;
-    box-shadow:  1px 2px 2px #3c4454,
-    -2px -3px 2px #3a4151;
-    input {
-        height: 100%;
-        width: 100%;
-        padding-left: 12px;
-        font-size: 16px;
-        border-radius: 6px;
-        color: $dark-color;
-        background-color: rgb(65, 74, 94);
+$dark-background: rgb(39, 44, 55);
 
-        border:none;
-        outline: none;
-        &:hover{
-            cursor: pointer;
-        }
+.search-wrapper {
+  height: 40px;
+  width: 200px;
+  border-radius: 10px;
+  position: absolute;
+  top: 60px;
+  left: 60vw;
+  display: block;
+  input {
+    height: 100%;
+    width: 100%;
+    padding-left: 12px;
+    font-size: 16px;
+    border-radius: 6px;
+    color: $dark-color;
+    background-color: $dark-background;
+
+    border: none;
+    outline: none;
+    &:hover {
+      cursor: pointer;
     }
+  }
 }
 .search-wrapper-close {
-    display: none;
+  display: none;
 }
 .match {
-    background-color: aqua !important;
+  background-color: aqua !important;
 }
