标题刷新防抖

--- a/src/renderer/src/styles/index.scss
+++ b/src/renderer/src/styles/index.scss
@@ -8,3 +8,8 @@
 .container {
     font-weight: 300;
 }
+
+.container .milkdown .editor .code-fence pre code {
+    font-family: -apple-system,BlinkMacSystemFont,PingFang SC,Hiragino Sans GB,sans-serif;
+
+}
