--- a/src/renderer/src/styles/layout.scss
+++ b/src/renderer/src/styles/layout.scss
@@ -22,6 +22,7 @@ main {
       height: 100%;
       display: flex;
       flex-direction: column;
+      padding: 0 4vw;
       .milkdown-menu {
         position: absolute;
         z-index: 999;
@@ -30,7 +31,6 @@ main {
         max-height: calc(100vh - 30px);
         height: 100%;
         width: 100%;
-        // border-radius: 6px;
         padding-top: 10px;
         overflow: scroll;
       }
