--- a/src/renderer/src/components/SideBar/styles/index.scss
+++ b/src/renderer/src/components/SideBar/styles/index.scss
@@ -1,5 +1,4 @@
-$dark-color: rgba(236, 239, 244, 0.87);
-$dark-background: rgb(39, 44, 55);
+
 $side-bar-width: 160px;
 $max-height: calc(100vh - 30px);
 $title-height: 30px;
@@ -7,8 +6,6 @@ $title-height: 30px;
   width: $side-bar-width;
   max-height: $max-height;
   min-width: 100px;
-  color: $dark-color;
-  background-color: $dark-background;
   padding: 30px 0 20px 0;
   transition: 0.4s;
   font-size: smaller;
@@ -60,8 +57,8 @@ $title-height: 30px;
           //占满剩余部分
           flex: auto;
           text-decoration: none;
-          text-decoration-color: $dark-color;
-          color: $dark-color;
+          // text-decoration-color: $dark-color;
+          // color: white;
         }
         svg {
           height: 8px;
@@ -107,7 +104,6 @@ $title-height: 30px;
     height: 90vh;
     top: 30px;
     z-index: 99999;
-    background-color: rgb(68, 77, 95);
     opacity: 0;
     &:hover {
       cursor: ew-resize;
@@ -120,7 +116,6 @@ $title-height: 30px;
     width: 100%;
     height: $title-height;
     border-top: 1px solid rgb(111, 109, 109);
-    background-color: $dark-background;
     display: none;
     svg {
       cursor: pointer;
@@ -131,4 +126,7 @@ $title-height: 30px;
   min-width: 0;
   // 加import是因为通过拖拽设置的宽度是行内样式，这里的无法覆盖
   width: 0 !important;
+  header {
+    overflow: hidden;
+  }
 }
