feat: commend + p 文件切换

--- a/src/renderer/src/components/Editor/styles/index.scss
+++ b/src/renderer/src/components/Editor/styles/index.scss
@@ -1,4 +1,9 @@
 @use './normalize.scss';
-.milkdown-menu-wrapper .milkdown-menu {
-  display: none;
+.milkdown-menu-wrapper {
+  position: relative;
+  .milkdown-menu {
+    left: 0;
+    width: 100%;
+    display: none;
+  }
 }
