--- a/src/renderer/src/components/Search/styles/index.scss
+++ b/src/renderer/src/components/Search/styles/index.scss
@@ -13,8 +13,6 @@
     padding-left: 12px;
     font-size: 16px;
     border-radius: 6px;
-    border: none;
-    outline: none;
     &:hover {
       cursor: pointer;
     }
@@ -28,6 +26,7 @@
 .search-file {
   top: 30px;
   position: fixed;
+  z-index: 9999;
   left: 50%;
   transform: translateX(-50%);
   font-size: 12px;
