--- a/src/renderer/src/components/SideBar/styles/index.scss
+++ b/src/renderer/src/components/SideBar/styles/index.scss
@@ -83,7 +83,7 @@ $title-height: 30px;
   }
   .file-list {
     overflow: scroll;
-    max-height: calc(100vh - 100px);
+    max-height: calc(100vh - 140px);
     li {
       display: flex;
       padding-left: 20px;
@@ -94,6 +94,16 @@ $title-height: 30px;
       &:hover {
         cursor: pointer;
         background-color: rgb(56, 62, 77);
+      }
+    }
+    .new-file {
+      display: flex;
+      input {
+        height: auto;
+        width: 90%;
+        padding-left: 4px;
+            box-shadow: 0px 0px 2px 0px;
+
       }
     }
   }
@@ -114,7 +124,7 @@ $title-height: 30px;
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: $title-height;
+    height: 40px;
     border-top: 1px solid rgb(111, 109, 109);
     display: none;
     svg {
