--- a/src/renderer/src/components/Editor/styles/normalize.scss
+++ b/src/renderer/src/components/Editor/styles/normalize.scss
@@ -31,3 +31,18 @@
 .milkdown::-webkit-scrollbar {
   width: 0 !important;
 }
+.milkdown .editor h1.heading {
+  font-weight: 500;
+}
+.milkdown .editor h3.heading {
+  font-weight: 300;
+  font-size: 30px;
+}
+.milkdown .editor h4.heading {
+  font-weight: 200;
+  font-size: 25px;
+}
+.milkdown .editor h5.heading {
+  font-weight: 100;
+  font-size: 20px;
+}
