--- a/src/renderer/src/components/SideBar/style/index.scss
+++ b/src/renderer/src/components/SideBar/style/index.scss
@@ -1,4 +1,4 @@
-@import './flie-list.scss';
+@import './file-list.scss';
 $side-bar-width: 250px;
 $max-height: calc(100vh - 30px);
 $title-height: 30px;
