--- a/src/renderer/src/assets/styles/index.scss
+++ b/src/renderer/src/assets/styles/index.scss
@@ -1,3 +1,4 @@
+@import './variables.scss';
 @import './theme/theme-dark.scss';
 @import './normalize.scss';
 @import '../../components/Editor/style/index.scss';
@@ -5,6 +6,7 @@
 @import '../../components/SideBar/style/index.scss';
 @import '../../components/Header/style/index.scss';
 @import './layout.scss';
+
 .container {
     @include theme-dark;
   }
