--- a/src/renderer/src/components/SideBar/style/file-list.scss
+++ b/src/renderer/src/components/SideBar/style/file-list.scss
@@ -2,6 +2,7 @@
   overflow: scroll;
   max-height: calc(100vh - 140px);
   padding-bottom: 50px;
+  flex: auto;
   ul {
     height: auto;
     li {
