fix: 解决重命名文件与重命名路径冲突问题

--- a/src/renderer/src/components/Header/style/index.scss
+++ b/src/renderer/src/components/Header/style/index.scss
@@ -3,6 +3,7 @@
   -webkit-app-region: drag;
   display: flex;
   justify-content: space-between;
+  user-select:none;
   .controlers {
     ul {
       display: flex;
