修改字体和编辑器默认高度,方便滚动,新建文件树分支,发现一个useState不能更新的bug

--- a/src/renderer/src/assets/styles/layout.scss
+++ b/src/renderer/src/assets/styles/layout.scss
@@ -34,6 +34,10 @@ main {
         width: 100%;
         padding-top: 10px;
         overflow: scroll;
+        // 让他有默认高度，方便滚动
+        >div {
+          width: 80vh;
+        }
       }
     }
   }
