--- a/src/renderer/src/assets/styles/theme/theme-dark.scss
+++ b/src/renderer/src/assets/styles/theme/theme-dark.scss
@@ -3,7 +3,7 @@ $dark-background: rgb(46 52 64);
 $dark-header-backgournd: rgb(59, 62, 81);
 $dark-sideBar-background: rgb(36, 41, 51);
 $active-font-color: rgb(129, 161, 193);
-$font-family: monospace;
+$font-family: sans-serif;
 $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragino Sans GB,
   sans-serif;
 // 最外层是container
