修改编辑器和重命名文件的样式

--- a/src/renderer/src/assets/styles/layout.scss
+++ b/src/renderer/src/assets/styles/layout.scss
@@ -36,7 +36,7 @@ main {
         overflow: scroll;
         // 让他有默认高度，方便滚动
         >div {
-          width: 80vh;
+          margin: auto;
         }
       }
     }
