--- a/src/renderer/src/assets/styles/theme/theme-dark.scss
+++ b/src/renderer/src/assets/styles/theme/theme-dark.scss
@@ -13,7 +13,10 @@ $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragin
   input {
     color: $dark-font-color;
     background-color: $dark-sideBar-background;
-    border: 1px solid $active-font-color;
+    border: 2px solid $active-font-color;
+    border-radius: 6px;
+    padding-left: 4px;
+    transform: scale(1.1);
   }
   & > header {
     background-color: $dark-header-backgournd;
@@ -39,6 +42,9 @@ $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragin
       background: $dark-background;
       color: $dark-font-color;
       font-family: $font-family;
+      p {
+        width: 100%;
+      }
       // 反引号，行内的代码
       .editor {
         code.code-inline {
@@ -57,7 +63,7 @@ $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragin
           }
         }
         .code-fence {
-          margin-top: 10px;
+          margin: 10px 0px;
           pre code {
             color: $dark-font-color;
             // font-family:$code-fence-font-family
@@ -68,7 +74,7 @@ $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragin
   }
   .search-file {
     background-color: $dark-sideBar-background;
-    li.active {
+    li.active,li:hover {
       background-color: $dark-header-backgournd;
       color: $active-font-color;
     }
