--- a/src/renderer/src/components/Global/style/search-file.scss
+++ b/src/renderer/src/components/Global/style/search-file.scss
@@ -12,9 +12,11 @@
       justify-content: center;
       align-items: center;
       height: 25px;
+      margin: 6px;
       input {
-        height: 80%;
+        height: 100%;
         width: 80%;
+        border-width: 1.6px;
       }
     }
     ul {
@@ -28,6 +30,9 @@
       font-size: 15px;
       span {
         margin-left: 20px;
+      }
+      &:hover {
+        cursor: pointer;
       }
     }
   }
