feat: 全局搜索的功能

--- a/src/renderer/src/assets/styles/theme/theme-dark.scss
+++ b/src/renderer/src/assets/styles/theme/theme-dark.scss
@@ -37,6 +37,9 @@ $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragin
         text-decoration-color: $dark-font-color;
         color: $dark-font-color;
       }
+      .swg {
+        background-color: $dark-sideBar-background;
+      }
     }
     .milkdown {
       background: $dark-background;
