--- a/src/renderer/src/components/SideBar/style/searchWordGlobal.scss
+++ b/src/renderer/src/components/SideBar/style/searchWordGlobal.scss
@@ -2,5 +2,45 @@
   position: absolute;
   z-index: 100;
   overflow: scroll;
-  max-height: calc(100vh - 100px);
+  height: 100%;
+  width: 100%;
+  padding: 10px 0;
+  top:0;
+  background-color: darkblue;
+  .input {
+    margin: 10px 0;
+    display: flex;
+    justify-content: center;
+    height: 25px;
+    input {
+      width: 80%;
+      height: 100%;
+    }
+  }
+  svg {
+    transition: all 0.5s;
+  }
+  svg.open {
+    transform: rotateZ(-90deg);
+  }
+  ul {
+    overflow: hidden;
+    li.fileName {
+      display: flex;
+      align-items: center;
+      svg {
+        margin-right: 10px;
+      }
+    }
+    li {
+      min-height: 30px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      padding-left: 20px;
+      &:hover {
+        cursor: pointer;
+        background-color: rgb(56, 62, 77);
+      }
+    }
+  }
 }
