fix: 修改了重命名无法focs,提取新建文件逻辑

--- a/src/renderer/src/components/SideBar/style/file-list.scss
+++ b/src/renderer/src/components/SideBar/style/file-list.scss
@@ -1,6 +1,8 @@
 .file-list {
   overflow: scroll;
   max-height: calc(100vh - 140px);
+  min-height: calc(100vh - 100px);
+
   padding-bottom: 50px;
   flex: auto;
   ul {
