--- a/src/renderer/src/components/SideBar/style/file-list.scss
+++ b/src/renderer/src/components/SideBar/style/file-list.scss
@@ -75,6 +75,9 @@
       display: none;
     }
   }
+  ul.drag-over {
+    background-color: aqua;
+  }
   .new-file {
     display: flex;
     input {
