勉强能用了,需要看看milkdown文档

--- a/src/renderer/src/assets/css/themes/theme-dark.scss
+++ b/src/renderer/src/assets/css/themes/theme-dark.scss
@@ -25,7 +25,10 @@ $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragin
     font-weight: 400;
     border-right: 1px solid $dark-header-backgournd;
     background-color: $dark-sideBar-background;
-
+    mark {
+    background-color: $dark-sideBar-background;
+color: rgb(162, 162, 214);
+    }
     .file-item-focus {
       background-color: rgb(46, 54, 71);
     }
