--- a/src/renderer/src/assets/css/themes/theme-dark.scss
+++ b/src/renderer/src/assets/css/themes/theme-dark.scss
@@ -39,6 +39,7 @@ $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragin
     li.file-item-active {
       border-left: 5px solid rgb(157, 157, 198);
       background-color: rgb(23, 27, 36);
+      color: #e9b77a;
     }
     .drag-line {
       background-color: $dark-header-backgournd;
@@ -77,17 +78,16 @@ $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragin
       .blockquote {
         padding-left: 14px;
         border-width: 2px;
-        margin: 15px 0;
+        margin: 30px 0;
         p {
           font-size: 18px;
           color: rgb(153, 164, 182);
         }
       }
       .code-fence {
-        margin: 10px 0px;
+        margin: 30px 0px;
         pre code {
           color: $dark-font-color;
-          // font-family:$code-fence-font-family
         }
       }
     }
