--- a/src/renderer/src/assets/css/themes/theme-dark.scss
+++ b/src/renderer/src/assets/css/themes/theme-dark.scss
@@ -38,7 +38,7 @@ $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragin
     }
     li.file-item {
       svg {
-        color: #96cbfe;
+        color: #9da7ed;
       }
     }
     li.file-item-active {
@@ -64,13 +64,14 @@ $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragin
     p {
       width: 100%;
     }
-    ul li.list-item {
-      color: #e9c062;
+    li.list-item {
+      color: #e5eef6;
       .list-item_label {
+      color: #4d91d2
         
       }
     }
-    ol li.list-item {
+    .heading {
       color: #dad085;
     }
     strong {
