--- a/src/renderer/src/assets/css/themes/theme-dark.scss
+++ b/src/renderer/src/assets/css/themes/theme-dark.scss
@@ -1,8 +1,12 @@
-$dark-font-color: rgb(229, 232, 243);
+// 配色参考：飞书文档深色模式
+$dark-font-color: rgb(221, 224, 235);
+$dark-font-hover-color: rgb(255, 255, 255);
 $dark-background: rgb(46 52 64);
 $dark-header-backgournd: rgb(59, 62, 81);
 $dark-sideBar-background: rgb(36, 41, 51);
 $active-font-color: rgb(129, 161, 193);
+$dark-mark-color: rgb(175, 213, 23);
+$dark-icon-hover-backgroundColor: rgb(65, 98, 118);
 $font-family: sans-serif;
 $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragino Sans GB,
   sans-serif;
@@ -25,11 +29,11 @@ $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragin
     border-right: 1px solid $dark-header-backgournd;
     background-color: $dark-sideBar-background;
     mark {
-      color: rgb(195, 239, 19);
+      color: $dark-mark-color;
       background-color: none;
-      border: 1px solid rgb(195, 239, 19);
+      border: 1px solid $dark-mark-color;
       background-color: $dark-sideBar-background;
-      border-radius: 20%;
+      border-radius: 6px;
       padding: 2px;
     }
     .file-item-focus {
@@ -38,6 +42,9 @@ $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragin
     li.file-item {
       svg {
         color: #9da7ed;
+      }
+      &:hover {
+        color: $dark-font-hover-color;
       }
     }
     li.file-item-active {
@@ -55,6 +62,13 @@ $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragin
     .swg {
       background-color: $dark-sideBar-background;
     }
+    .header-list {
+      .svg-container {
+        &:hover {
+          background-color: $dark-icon-hover-backgroundColor;
+        }
+      }
+    }
   }
   .milkdown {
     background: $dark-background;
@@ -66,8 +80,7 @@ $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragin
     li.list-item {
       color: #e5eef6;
       .list-item_label {
-      color: #4d91d2
-        
+        color: #4d91d2;
       }
     }
     .heading {
@@ -117,10 +130,16 @@ $code-fence-font-family: -apple-system, BlinkMacSystemFont, PingFang SC, Hiragin
     }
   }
   .search-word {
-  box-shadow: 0 3px 12px 2px hwb(210deg 14% 82%);
-.input-container {
-  background-color: $dark-background;
-
-}
+    box-shadow: 0 3px 12px 2px hwb(210deg 14% 82%);
+    .input-container {
+      background-color: $dark-background;
+    }
+  }
+  .search-word-global {
+    div.fn {
+      div:hover {
+        background-color: $dark-icon-hover-backgroundColor;
+      }
+    }
   }
 }
